<resources>
    <string name="app_name">VM Transfer</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer_money_to">Transfer Money to</string>
    <string name="amount">Transfer Amount</string>
    <string name="from_account">From Account</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="congratulations">Congratulations !!!</string>
    <string name="done">Done</string>
    <string name="let_s_verify_it_s_you_neha">Let\'s Verify It\'s You \nNeha</string>
    <string name="money_transfered_successfully">Money Transfered Successfully</string>
    <string name="looks_like_phrase_doesn_t_match_please_try_again">Ooops !!! \n Looks like phrase doesn\'t match, Please try again!</string>
</resources>
